--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-streamlit==1.29.0
-pandas==2.1.4
-plotly==5.18.0
-python-dateutil==2.8.2
-matplotlib==3.8.2
+streamlit>=1.28.0
+pandas>=2.0.0
+plotly>=5.15.0
